--- a/assessment.html
+++ b/assessment.html
@@ -99,6 +99,7 @@
   <option value="item-3">Baseball</option>
   <option value="item-4">Soccer</option>
   <br>
+
 <br>
 <p> I have: </p>
 <input type="checkbox" name="Attended" value=""> I have attended</input>
@@ -108,9 +109,9 @@
 
 <br>
 <p>For this sport I prefer the :</p>
-<input type="radio" name="Amateur" value=""> Amateur </input>
-<input type="radio" name="College" value=""> College </input>
-<input type="radio" name="Professional" value=""> Professional </input>
+<input type="radio" name="preference" value="Amateur"> Amateur </input>
+<input type="radio" name="preference" value="College"> College </input>
+<input type="radio" name="preference" value="Professional"> Professional </input>
 <input type="submit" name="" value="Submit Query">
 </form>
   </body>
